# poc-ai-images

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  firefly-api.json  pyproject.toml  requirements.txt  run_tests.sh
app/: __init__.py  __main__.py  asset_manager.py  compliance.py  config.py  firefly_generator.py  generator.py  google_generator.py  logger.py  main.py  parsers.py  processor.py  sanitization.py  storage.py  test_manager.py  validate.py
demo/: README.md
docs/: README.md  validation-tools.md
docs/architecture/: ARCHITECTURE_AND_DESIGN.md
docs/assets/: ASSET_INPUT_AND_REUSE.md  PROMPT_ENGINEERING.md
docs/providers/: FIREFLY_INTEGRATION.md  HUGGINGFACE_EXAMPLE.md
docs/testing/: TESTING_QUICK_REFERENCE.md
examples/: campaign_brief.json  campaign_brief_coffee_roaster_launch.json  campaign_brief_coffee_roaster_seasonal.yaml  campaign_brief_enterprise.yaml  campaign_brief_problematic.yaml  coffee_roaster_scenarios.md  huggingface_brief.json  logo_brief.json  sample_brief.json  sample_brief.yaml
scripts/: cleanup_git.sh  verify_dalle.py  verify_dalle_quick.py
scripts/validation/: validate_asset_manager.py  validate_hf_example.py
templates/: dashboard.html  index.html
tests/: __init__.py  conftest.py  test_config.json
tests/e2e/: test_e2e_assets.py
tests/integration/: test_dalle_implementation.py  test_firefly_generator.py  test_google_generator.py  test_prompt_integration.py
tests/unit/: test_asset_manager.py  test_asset_system.py  test_compliance.py  test_fallback_system.py  test_generator.py  test_logger.py  (+4 more)
